--- a/templates/index.html
+++ b/templates/index.html
@@ -16,39 +16,49 @@
     <div class="container">
         <h1>Welcome to Roof Insights</h1>
         <div class="video-container">
-            <div class="video-feed-wrapper">
-                <img src="{{ url_for('video_stream') }}" class="video-feed" />
-            </div>
             <form action="/capture" method="post">
                 <div class="controls">
                     <label for="lower_gloss_thresh">Lower Gloss Threshold:</label>
                     <input type="number" id="lower_gloss_thresh" name="lower_gloss_thresh" value="{{ lower_gloss_thresh }}" min="0" max="255">
-
                     <label for="upper_gloss_thresh">Upper Gloss Threshold:</label>
                     <input type="number" id="upper_gloss_thresh" name="upper_gloss_thresh" value="{{ upper_gloss_thresh }}" min="0" max="255">
-
                     <button type="submit" class="btn">Capture Image</button>
                 </div>
             </form>
         </div>
-        {% if captured_image %}
-            <div class="captured-image-container">
-                <h3>Processed Image:</h3>
-                <img id="captured-image" src="{{ captured_image }}" class="captured-image" />
-
-                <h3>Slab Segmentation Mask:</h3>
-                <img src="{{ slab_mask_image }}" class="intermediate-image" />
-
-                <h3>Gloss Mask:</h3>
-                <img src="{{ gloss_mask_image }}" class="intermediate-image" />
-
-                {% if glossy_percentage is not none %}
-                    <p>Glossy Area Percentage: {{ glossy_percentage|round(2) }}%</p>
-                {% else %}
-                    <p>Glossy Area Percentage: N/A</p>
+        
+            <div class="image-grid">
+                <div class="grid-item">
+                    <h3>Live Video Feed:</h3>
+                    <img src="{{ url_for('video_stream') }}" class="grid-image" />
+                </div>
+                {% if captured_image %}
+                <div class="grid-item">
+                    <h3>Original Image:</h3>
+                    <img src="{{ original_image }}" class="grid-image" />
+                </div>
+                <div class="grid-item">
+                    <h3>Processed Image:</h3>
+                    <img src="{{ captured_image }}" class="grid-image" />
+                </div>
+                <div class="grid-item">
+                    <h3>Slab Segmentation Mask:</h3>
+                    <img src="{{ slab_mask_image }}" class="grid-image" />
+                </div>
+                <div class="grid-item">
+                    <h3>Gloss Mask:</h3>
+                    <img src="{{ gloss_mask_image }}" class="grid-image" />
+                </div>
+                <!-- Optionally add an empty grid item to fill the grid -->
+                <div class="grid-item"></div>
                 {% endif %}
             </div>
-        {% endif %}
+            {% if glossy_percentage is not none %}
+                <p>Glossy Area Percentage: {{ glossy_percentage|round(2) }}%</p>
+            {% else %}
+                <p>Glossy Area Percentage: N/A</p>
+            {% endif %}
+        
     </div>
     <div class="footer">
         &copy; 2024 Roof Insights. All rights reserved.
